--- a/.gitignore
+++ b/.gitignore
@@ -290,3 +290,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,pythonvanilla,linux,macos,git
+
+config.json
+
+.vscode
